--- a/po/nl.po
+++ b/po/nl.po
@@ -8,165 +8,165 @@ msgstr ""
 "Project-Id-Version: unity-scope-youtube\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2016-08-19 09:13+0000\n"
-"PO-Revision-Date: 2016-06-08 09:40+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2016-08-24 10:21+0000\n"
+"Last-Translator: Hannie Dumoleyn <Unknown>\n"
 "Language-Team: Dutch <nl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2016-08-20 06:13+0000\n"
-"X-Generator: Launchpad (build 18176)\n"
+"X-Launchpad-Export-Date: 2016-08-25 06:02+0000\n"
+"X-Generator: Launchpad (build 18179)\n"
 
 #: ../data/com.ubuntu.scopes.youtube.ini.in.h:1
 #: ../src/youtube/scope/query.cpp:733
 msgid "YouTube"
-msgstr ""
+msgstr "YouTube"
 
 #: ../data/com.ubuntu.scopes.youtube.ini.in.h:2
 msgid "Search YouTube for videos and browse channels"
-msgstr ""
+msgstr "Video's zoeken en kanalen verkennen op YouTube"
 
 #: ../src/youtube/scope/query.cpp:309 ../src/youtube/scope/query.cpp:778
 msgid "Favorites"
-msgstr ""
+msgstr "Bladwijzers"
 
 #: ../src/youtube/scope/query.cpp:310 ../src/youtube/scope/query.cpp:779
 msgid "Watch Later"
-msgstr ""
+msgstr "Later bekijken"
 
 #: ../src/youtube/scope/query.cpp:321
 #, c-format
 msgid "1 subscriber"
 msgid_plural "%d subscribers"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "1 abonnee"
+msgstr[1] "%d abonnee's"
 
 #: ../src/youtube/scope/query.cpp:360
 #, c-format
 msgid "1 video"
 msgid_plural "%d videos"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "1 video"
+msgstr[1] "%d video's"
 
 #: ../src/youtube/scope/query.cpp:403
 msgid "</b> videos"
-msgstr ""
+msgstr "</b> video's"
 
 #: ../src/youtube/scope/query.cpp:404
 msgid "</b> views"
-msgstr ""
+msgstr "</b> bekeken"
 
 #: ../src/youtube/scope/query.cpp:405
 msgid "</b> subscribers"
-msgstr ""
+msgstr "</b> abonnee's"
 
 #: ../src/youtube/scope/query.cpp:460
 msgid "Log-in to YouTube"
-msgstr ""
+msgstr "Aanmelden op YouTube"
 
 #: ../src/youtube/scope/query.cpp:565
 msgid "Uploads"
-msgstr ""
+msgstr "Uploads"
 
 #: ../src/youtube/scope/query.cpp:585 ../src/youtube/scope/query.cpp:889
 msgid "Videos"
-msgstr ""
+msgstr "Video's"
 
 #: ../src/youtube/scope/query.cpp:612
 msgid "No video can be found in this channel"
-msgstr ""
+msgstr "Geen video aangetroffen in dit kanaal"
 
 #: ../src/youtube/scope/query.cpp:623 ../src/youtube/scope/query.cpp:901
 msgid "Channels"
-msgstr ""
+msgstr "Kanalen"
 
 #: ../src/youtube/scope/query.cpp:637
 msgid "No channel can be found"
-msgstr ""
+msgstr "Geen kanaal gevonden"
 
 #: ../src/youtube/scope/query.cpp:648 ../src/youtube/scope/query.cpp:895
 msgid "Playlists"
-msgstr ""
+msgstr "Afspeellijsten"
 
 #: ../src/youtube/scope/query.cpp:676
 msgid "No playlist can be found in this channel"
-msgstr ""
+msgstr "Geen afspeellijst gevonden in dit kanaal"
 
 #: ../src/youtube/scope/query.cpp:687
 msgid "Playlist contents"
-msgstr ""
+msgstr "Inhoud van afspeellijst"
 
 #: ../src/youtube/scope/query.cpp:704
 msgid "Channel contents"
-msgstr ""
+msgstr "Inhoud van kanaal"
 
 #: ../src/youtube/scope/query.cpp:724
 msgid "No video can be found"
-msgstr ""
+msgstr "Geen video gevonden"
 
 #: ../src/youtube/scope/query.cpp:777
 msgid "Likes"
-msgstr ""
+msgstr "Leuk"
 
 #: ../src/youtube/scope/query.cpp:798 ../src/youtube/scope/query.cpp:840
 msgid "My Subscriptions"
-msgstr ""
+msgstr "Mijn abonnementen"
 
 #: ../src/youtube/scope/query.cpp:808 ../src/youtube/scope/query.cpp:861
 msgid "My Playlist"
-msgstr ""
+msgstr "Mijn afspeellijst"
 
 #: ../src/youtube/scope/query.cpp:1035
 #, c-format
 msgid "1 result from YouTube"
 msgid_plural "%d results from YouTube"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "1 YouTube-resultaat"
+msgstr[1] "%d YouTube-resultaten"
 
 #: ../src/youtube/scope/query.cpp:1049
 msgid "YouTube requires an internet connection"
-msgstr ""
+msgstr "YouTube vereist een internetverbinding"
 
 #: ../src/youtube/scope/preview.cpp:79
 msgid " views"
-msgstr ""
+msgstr " bekeken"
 
 #: ../src/youtube/scope/preview.cpp:97
 msgid "<br/>  Published on: </b>"
-msgstr ""
+msgstr "<br/>  Gepubliceerd op: </b>"
 
 #: ../src/youtube/scope/preview.cpp:102
 msgid "Please login to post a comment  "
-msgstr ""
+msgstr "Gelieve u aan te melden om een opmerking te plaatsen  "
 
 #: ../src/youtube/scope/preview.cpp:108
 msgid "open"
-msgstr ""
+msgstr "openen"
 
 #: ../src/youtube/scope/preview.cpp:109
 msgid "Login to youtube"
-msgstr ""
+msgstr "Aanmelden bij youtube"
 
 #: ../src/youtube/scope/preview.cpp:130
 msgid "Unsubscribe"
-msgstr ""
+msgstr "Opzeggen"
 
 #: ../src/youtube/scope/preview.cpp:130
 msgid "Subscribe"
-msgstr ""
+msgstr "Abonneren"
 
 #: ../src/youtube/scope/preview.cpp:134
 msgid "Thumb up"
-msgstr ""
+msgstr "Duim omhoog"
 
 #: ../src/youtube/scope/preview.cpp:138
 msgid "Thumb down"
-msgstr ""
+msgstr "Duim omlaag"
 
 #: ../src/youtube/scope/preview.cpp:142
 msgid "Add to watch list"
-msgstr ""
+msgstr "Toevoegen aan observatielijst"
 
 #: ../src/youtube/scope/preview.cpp:146
 msgid "Add to favorites list"
@@ -174,12 +174,12 @@ msgstr ""
 
 #: ../src/youtube/scope/preview.cpp:152 ../src/youtube/scope/preview.cpp:297
 msgid "User channel"
-msgstr ""
+msgstr "Gebruikerskanaal"
 
 #: ../src/youtube/scope/preview.cpp:161
 msgid "Post"
-msgstr ""
+msgstr "Plaatsen"
 
 #: ../src/youtube/scope/preview.cpp:290
 msgid "View in browser"
-msgstr ""
+msgstr "Bekijken in webbrowser"
